# VAS

./: .gitignore  README.md  config.json
Admin/app/: urls.py
Admin/app/utils/: Analyzer.py
Admin/app/views/: ViewsBase.py  api.py
Admin/framework/: settings.py
Analyzer/: .gitignore  CMakeLists.txt  config.json
Analyzer/Analyzer/: Analyzer.vcxproj  Analyzer.vcxproj.filters  CMakeLists.txt  Test.cpp  Test.h  config.json  main.cpp
Analyzer/Analyzer/Core/: Algorithm.h  AlgorithmOnnxRuntime.cpp  AlgorithmOnnxRuntime.h  Analyzer.cpp  Analyzer.h  AvPullStream.cpp  AvPullStream.h  AvPushStream.cpp  AvPushStream.h  Config.cpp  Config.h  Control.h  ControlExecutor.cpp  ControlExecutor.h  GenerateAlarm.cpp  GenerateAlarm.h  GenerateAlarmVideo.cpp  GenerateVideo.cpp  GenerateVideo.h  Scheduler.cpp  Scheduler.h  Server.cpp  Server.h  Worker.cpp
